--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "moment": "^2.29.1",
+    "nanoid": "^3.1.20",
     "react": "^16.14.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
     "react-fontawesome": "^1.7.1",
-    "react-phone-input-2": "^2.13.9",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-select": "^4.1.0",
     "react-select-country-list": "^2.2.3",
     "react-widgets": "^5.0.0-beta.22",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.7"
+    "redux-form": "^8.3.7",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
