--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
     "react-fontawesome": "^1.7.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
