--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,10 @@
     "plugins": [
         "react"
     ],
+    "ignorePatterns": [".gitignore","serviceWorker.js"],
     "rules": {
-        "react/jsx-filename-extension": [0] 
+        "react/jsx-filename-extension": [0] ,
+        "jsx-a11y/no-noninteractive-element-interactions": [0],
+        "jsx-a11y/anchor-is-valid": [0]
     }
 }
