--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-widgets": "^5.0.0-beta.22",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,7 +54,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prop-types": "^15.7.2"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
